# G1-Simulator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cc  pixi.toml
simulate/: config.yaml
simulate/inc/: g1_move.h  gamepad.h  param.h  physics_joystick.h  unitree_sdk2_bridge.h
simulate/src/: g1_move.cc  gamepad.cc  physics_joystick.cc  unitree_sdk2_bridge.cc
